fixed communit not showing when no user id, added css

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Playfair+Display:wght@700&display=swap');
 
 
-.dashboard-container{
+.container{
     background-color: white;
     display: flex;
     justify-content: center;
